Add Huawei's clone reference